--- a/src/css/less/index.less
+++ b/src/css/less/index.less
@@ -1,9 +1,38 @@
-body{
-	color: #333;
-	header{
-		height: 100px;
-		border:1px solid orange;
-		background-color: orange;
+body
+{
+	min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items:stretch;
+    color: #fff;
+}
+header
+{
+    height: 100px;
+    background: #000;
+}
+.main-wrap
+{
+	display: flex;
+    background: #ccc;
+    flex: 1;
+    height: 100%;
+    justify-content:center;
+    align-items:stretch;
+	.left-bar{
+		width: 300px;
+		height: ~'calc(100vh - 200px)';
+		background: #f90;
 
 	}
+	.right-content{
+		flex:1;
+		background: #ddd;
+	}
+}
+footer
+{
+    height: 100px;
+
+    background: #000;
 }
